# quarb-rs

./: .gitignore  Cargo.toml  README.md  petgraph-adapter.md
.cargo/: config.toml
.github/workflows/: publish-pypi-full.yml  publish-pypi-quai.yml  publish-pypi.yml
doc/: impl.tex  qua.tex
doc/quarb-gsheet/: Cargo.toml
qm/: Cargo.toml  README.md
qm/src/: main.rs
qua/: Cargo.toml  README-pypi.md  README.md  pyproject.toml
qua-py/: Cargo.toml  README.md  pyproject.toml
qua-py/python/qua/: __init__.py  _qua.pyi
qua-py/python/quarb/: __init__.py  _cli.py  _quarb.pyi
qua-py/src/: lib.rs
qua-py/tests/: test_run.py
qua/src/: lib.rs  main.rs
quai/: Cargo.toml  README.md
quai-py/: .gitignore  README.md  pyproject.toml
quai-py/quai/: __init__.py  cli.py  session.py
quai-wasm/: Cargo.toml
quai-wasm/src/: lib.rs
quai/src/: main.rs
quarb/: Cargo.toml  README.md
quarb-archive/: Cargo.toml  README.md
quarb-archive/src/: lib.rs
quarb-archive/tests/: archive.rs
quarb-atrep/: Cargo.toml
quarb-atrep/src/: lib.rs
quarb-bigquery/: Cargo.toml  README.md
quarb-bigquery/src/: lib.rs
quarb-bigquery/tests/: bigquery.rs
quarb-cbor/: Cargo.toml  README.md
quarb-cbor/src/: lib.rs
quarb-code/: Cargo.toml  README.md  build.rs
quarb-code/src/: ast_cache.rs  lib.rs
quarb-code/src/ast_cache/: tests.rs
quarb-code/tests/: code.rs
quarb-compose/: Cargo.toml  README.md
quarb-compose/src/: lib.rs
quarb-compose/tests/: compose.rs
quarb-csv/: Cargo.toml  README.md
quarb-csv/src/: lib.rs
quarb-csv/tests/: csv.rs
quarb-datastore/: Cargo.toml  README.md
quarb-datastore/src/: lib.rs
quarb-datastore/tests/: datastore.rs
quarb-duckdb/: Cargo.toml  README.md
quarb-duckdb/examples/: mkduck.rs  mkview.rs  probe.rs
quarb-duckdb/src/: lib.rs
quarb-duckdb/tests/: duckdb.rs
quarb-firebase/: Cargo.toml  README.md
quarb-firebase/src/: lib.rs
quarb-firebase/tests/: firebase.rs
quarb-firestore/: Cargo.toml  README.md
quarb-firestore/src/: lib.rs
quarb-firestore/tests/: firestore.rs
quarb-fs/: Cargo.toml  README.md
quarb-fs/src/: lib.rs
quarb-fs/tests/: fs.rs
quarb-git/: Cargo.toml  README.md
quarb-git/src/: lib.rs
quarb-git/tests/: git.rs
quarb-github/: Cargo.toml  README.md
quarb-github/src/: lib.rs
quarb-github/tests/: github.rs
quarb-gitlab/: Cargo.toml  README.md
quarb-gitlab/src/: lib.rs
quarb-gitlab/tests/: gitlab.rs
quarb-gitlab/tests/fixtures/: groups_tesslab%2Finstruments.json  groups_tesslab%2Finstruments_projects.json  groups_tesslab.json  groups_tesslab_projects.json  groups_tesslab_subgroups_all_available_true.json  projects_ada%2Fboiler.json  projects_ada%2Fkettle.json  projects_tesslab%2Finstruments%2Fgauge.json  projects_tesslab%2Fkettle.json  projects_tesslab%2Fkettle_forks.json  projects_tesslab%2Fkettle_issues_2.json  projects_tesslab%2Fkettle_issues_state_opened.json  projects_tesslab%2Fkettle_members.json  projects_tesslab%2Fkettle_merge_requests_state_opened.json  projects_tesslab%2Fkettle_pipelines.json  projects_tesslab%2Fkettle_pipelines_902.json  projects_tesslab%2Fkettle_pipelines_902_jobs.json  projects_tesslab%2Fkettle_releases.json  projects_tesslab%2Fkettle_repository_files_README.md_ref_main.json  projects_tesslab%2Fkettle_repository_tree.json  projects_tesslab%2Fkettle_repository_tree?path=src.json  users?username=ada.json  users?username=grace.json  users_101_projects.json  version.json
quarb-gsheet/: Cargo.toml  README.md
quarb-gsheet/src/: lib.rs
quarb-gsheet/tests/: gsheet.rs
quarb-html/: Cargo.toml  README.md
quarb-html/src/: lib.rs
quarb-html/tests/: html.rs
quarb-imap/: Cargo.toml  README.md
quarb-imap/src/: lib.rs
quarb-imap/tests/: imap.rs  server.py
quarb-jq/: Cargo.toml  README.md
quarb-jq/src/: export.rs  lib.rs
quarb-jq/tests/: export.rs  roundtrip.rs
quarb-json/: Cargo.toml  README.md
quarb-json/src/: lib.rs
quarb-json/tests/: json.rs
quarb-kaiv/: Cargo.toml  README.md
quarb-kaiv/src/: lib.rs
quarb-kubernetes/: Cargo.toml  README.md
quarb-kubernetes/src/: lib.rs
quarb-kubernetes/tests/: kubernetes.rs
quarb-ldap/: Cargo.toml  README.md
quarb-ldap/src/: lib.rs
quarb-maildir/: Cargo.toml  README.md
quarb-maildir/src/: lib.rs
quarb-maildir/tests/: maildir.rs
quarb-markdown/: Cargo.toml  README.md
quarb-markdown/src/: lib.rs
quarb-metatheca/: Cargo.toml  README.md
quarb-metatheca/src/: lib.rs
quarb-metatheca/tests/: metatheca.rs
quarb-mongodb/: Cargo.toml  README.md
quarb-mongodb/src/: lib.rs
quarb-mongodb/tests/: mongodb.rs
quarb-mount/: Cargo.toml  README.md
quarb-mount/src/: lib.rs
quarb-mount/tests/: mount.rs
quarb-mssql/: Cargo.toml  README.md
quarb-mssql/src/: lib.rs
quarb-mssql/tests/: mssql.rs
quarb-mysql/: Cargo.toml  README.md
quarb-mysql/src/: lib.rs
quarb-mysql/tests/: mysql.rs
quarb-neo4j/: Cargo.toml  README.md
quarb-neo4j/src/: lib.rs
quarb-neo4j/tests/: fixture.cypher  neo4j.rs
quarb-objstore/: Cargo.toml  README.md
quarb-objstore/src/: lib.rs
quarb-objstore/tests/: objstore.rs
quarb-oracle/: Cargo.toml  README.md
quarb-oracle/src/: lib.rs
quarb-oracle/tests/: oracle.rs
quarb-postgres/: Cargo.toml  README.md
quarb-postgres/src/: lib.rs
quarb-postgres/tests/: postgres.rs
quarb-py/: Cargo.toml  LICENSE-APACHE  README.md  pyproject.toml
quarb-py/lab/: .gitignore  README.md  package.json  tsconfig.json
quarb-py/src/: lib.rs
quarb-py/tests/: test_ipython.py  test_kernel.py  test_open.py  test_run.py
quarb-relational/: Cargo.toml  README.md
quarb-relational/src/: lib.rs
quarb-relational/tests/: lazy.rs
quarb-serve/: Cargo.toml  README.md
quarb-serve/src/: lib.rs
quarb-serve/tests/: serve.rs
quarb-session/: Cargo.toml  README.md
quarb-session/src/: doc.rs  (+5 more)
quarb-sql/: Cargo.toml  README.md
quarb-sqlite/: Cargo.toml  README.md
quarb-toml/: Cargo.toml  README.md
quarb-wasm/: Cargo.toml
quarb-xlsx/: Cargo.toml  README.md
quarb-xml/: Cargo.toml  README.md
quarb-xpath/: Cargo.toml  README.md
quarb-yaml/: Cargo.toml  README.md
(+86 files in other folders)
