[package]
# The `qm` name on crates.io belongs to an unrelated project
# (hd-gmbh's microservice utilities). The mail client ships from
# source until it gets a registry-safe name.
publish = false
name = "qm"
description = "A mailbox interface for the terminal, on the Quarb engine"
keywords = ["email", "mail", "cli", "quarb"]
categories = ["command-line-utilities", "email"]
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
quarb = { path = "../quarb", version = "0.5.0" }
quarb-maildir = { path = "../quarb-maildir", version = "0.5.0" }
anyhow.workspace = true
clap.workspace = true
