[package]
name = "qua"
description = "Structure-aware query CLI for the Quarb engine"
keywords = ["query", "cli", "quarb", "xpath", "jq"]
categories = ["command-line-utilities"]
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "qua"
path = "src/main.rs"

[dependencies]
quarb = { path = "../quarb", version = "0.5.0" }
quarb-fs = { path = "../quarb-fs", version = "0.5.0" }
quarb-imap = { path = "../quarb-imap", version = "0.5.0" }
quarb-json = { path = "../quarb-json", version = "0.5.0" }
quarb-yaml = { path = "../quarb-yaml", version = "0.5.0" }
quarb-toml = { path = "../quarb-toml", version = "0.5.0" }
quarb-kaiv = { path = "../quarb-kaiv", version = "0.5.0" }
quarb-markdown = { path = "../quarb-markdown", version = "0.5.0" }
quarb-gsheet = { path = "../quarb-gsheet", version = "0.5.0" }
quarb-html = { path = "../quarb-html", version = "0.5.0" }
quarb-xml = { path = "../quarb-xml", version = "0.5.0" }
quarb-bigquery = { path = "../quarb-bigquery", version = "0.5.0" }
quarb-archive = { path = "../quarb-archive", version = "0.5.0" }
quarb-code = { path = "../quarb-code", version = "0.5.0" }
quarb-compose = { path = "../quarb-compose", version = "0.5.0" }
quarb-csv = { path = "../quarb-csv", version = "0.5.0" }
quarb-maildir = { path = "../quarb-maildir", version = "0.5.0" }
quarb-metatheca = { path = "../quarb-metatheca", version = "0.5.0" }
quarb-atrep = { path = "../quarb-atrep", version = "0.5.0" }
quarb-datastore = { path = "../quarb-datastore", version = "0.5.0" }
quarb-duckdb = { path = "../quarb-duckdb", version = "0.5.0" }
quarb-firebase = { path = "../quarb-firebase", version = "0.5.0" }
quarb-firestore = { path = "../quarb-firestore", version = "0.5.0" }
quarb-git = { path = "../quarb-git", version = "0.5.0" }
quarb-github = { path = "../quarb-github", version = "0.5.0" }
quarb-gitlab = { path = "../quarb-gitlab", version = "0.5.0" }
quarb-xpath = { path = "../quarb-xpath", version = "0.5.0" }
quarb-jq = { path = "../quarb-jq", version = "0.5.0" }
quarb-kubernetes = { path = "../quarb-kubernetes", version = "0.5.0" }
quarb-mongodb = { path = "../quarb-mongodb", version = "0.5.0" }
quarb-mssql = { path = "../quarb-mssql", version = "0.5.0" }
quarb-oracle = { path = "../quarb-oracle", version = "0.5.0" }
quarb-ldap = { path = "../quarb-ldap", version = "0.5.0" }
quarb-cbor = { path = "../quarb-cbor", version = "0.5.0" }
quarb-mount = { path = "../quarb-mount", version = "0.5.0" }
clap.workspace = true
anyhow.workspace = true
kaiv = { version = "0.6.0", default-features = false }
quarb-mysql = { path = "../quarb-mysql", version = "0.5.0" }
quarb-objstore = { path = "../quarb-objstore", version = "0.5.0" }
quarb-neo4j = { path = "../quarb-neo4j", version = "0.5.0" }
quarb-postgres = { path = "../quarb-postgres", version = "0.5.0" }
quarb-serve = { path = "../quarb-serve", version = "0.5.0" }
quarb-xlsx = { path = "../quarb-xlsx", version = "0.5.0" }
quarb-sql = { path = "../quarb-sql", version = "0.5.0" }
rusqlite.workspace = true
quarb-sqlite = { path = "../quarb-sqlite", version = "0.5.0" }
libc = "0.2.186"
