[package]
name = "quai"
description = "Interactive Quarb — a session REPL with query-macro history"
keywords = ["query", "repl", "interactive", "quarb"]
categories = ["command-line-utilities"]
readme = "README.md"
# Decoupled from the workspace 0.3.0 fleet so quai can patch (README,
# the rustyline line-editor) without a full fleet re-release.
version = "0.4.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "quai"
path = "src/main.rs"

[dependencies]
quarb = { path = "../quarb", version = "0.4.0" }
quarb-session = { path = "../quarb-session", version = "0.4.0" }
clap.workspace = true
anyhow.workspace = true
rustyline = "14"
