[package]
name = "quarb-archive"
description = "Zip and tar archive adapter for the Quarb query engine"
keywords = ["query", "zip", "tar", "archive", "quarb"]
categories = ["parser-implementations", "filesystem"]
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
quarb = { path = "../quarb", version = "0.5.0" }
zip.workspace = true
tar.workspace = true
flate2.workspace = true
thiserror.workspace = true

[dev-dependencies]
zip.workspace = true
