[package]
name = "quarb-atrep"
description = "Atrep semantic-document adapter for the Quarb query engine"
keywords = ["query", "atrep", "markup", "quarb", "arbor"]
categories = ["parser-implementations", "text-processing"]
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
quarb = { path = "../quarb", version = "0.6.0" }
atrep = { version = "0.1.0", default-features = false }
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
