[package]
name = "quarb-bigquery"
description = "Google BigQuery adapter for the Quarb query engine"
keywords = ["query", "bigquery", "sql", "quarb"]
categories = ["database", "api-bindings"]
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
quarb = { path = "../quarb", version = "0.2.0" }
quarb-relational = { path = "../quarb-relational", version = "0.2.0" }
ureq.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
quarb-sql = { path = "../quarb-sql", version = "0.2.0" }
