[package]
name = "quarb-code"
description = "Source-code AST adapter for the Quarb query engine (tree-sitter)"
keywords = ["query", "ast", "tree-sitter", "code", "quarb"]
categories = ["development-tools", "parsing"]
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
quarb = { path = "../quarb", version = "0.1.0" }
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
thiserror.workspace = true
