[package]
name = "quarb-csv"
description = "CSV adapter for the Quarb query engine"
keywords = ["query", "csv", "quarb", "arbor"]
categories = ["parser-implementations", "encoding"]
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
quarb = { path = "../quarb", version = "0.4.0" }
csv.workspace = true
