[package]
name = "quarb-firebase"
description = "Firebase Realtime Database adapter for the Quarb query engine"
keywords = ["query", "firebase", "quarb"]
categories = ["database", "api-bindings"]
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
quarb = { path = "../quarb", version = "0.2.0" }
ureq.workspace = true
serde_json.workspace = true
thiserror.workspace = true
