[package]
name = "quarb-firestore"
description = "Google Firestore adapter for the Quarb query engine"
keywords = ["query", "firestore", "google", "quarb"]
categories = ["database", "api-bindings"]
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
quarb = { path = "../quarb", version = "0.5.0" }
ureq.workspace = true
serde_json.workspace = true
thiserror.workspace = true
