[package]
name = "quarb-fs"
description = "Filesystem adapter for the Quarb query engine"
keywords = ["query", "filesystem", "files", "quarb"]
categories = ["filesystem", "parser-implementations"]
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
quarb = { path = "../quarb", version = "0.2.0" }
ignore = "0.4"

[dev-dependencies]
tempfile.workspace = true
