[package]
name = "quarb-git"
description = "Git repository adapter for the Quarb query engine"
keywords = ["query", "git", "repository", "quarb"]
categories = ["development-tools", "parser-implementations"]
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
quarb = { path = "../quarb", version = "0.1.0" }
thiserror.workspace = true
