[package]
name = "quarb-gitlab"
description = "GitLab API adapter for the Quarb query engine"
keywords = ["query", "gitlab", "api", "quarb"]
categories = ["database", "api-bindings"]
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
quarb = { path = "../quarb", version = "0.6.0" }
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
