[package]
name = "quarb-html"
description = "HTML adapter for the Quarb query engine"
keywords = ["query", "html", "quarb", "arbor"]
categories = ["parser-implementations", "web-programming"]
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
quarb = { path = "../quarb", version = "0.2.0" }
scraper.workspace = true
