[package]
name = "quarb-ldap"
description = "LDAP directory adapter for the Quarb query engine"
keywords = ["query", "ldap", "directory", "quarb"]
categories = ["database", "network-programming"]
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
quarb = { path = "../quarb", version = "0.5.0" }
ldap3.workspace = true
thiserror.workspace = true
