[package]
name = "quarb-maildir"
description = "Maildir and mbox adapter for the Quarb query engine"
keywords = ["query", "maildir", "mbox", "email", "mail"]
categories = ["email"]
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
quarb = { path = "../quarb", version = "0.2.0" }
thiserror.workspace = true
